# ResuMatch

./: .gitignore  README.md  index.html  package-lock.json  package.json  run-backend.py  server.js  vercel.json  vite.config.js
api/: index.js
backend/: .env  .env.example  Dockerfile  README.md  check_llama.py  deploy_lambda.sh  main.py  pyproject.toml  render.yaml  requirements.txt  setup.py  upload_resumes_script.py
backend/services/: __init__.py  claude_service.py  database_service.py  embedding_service.py  llama_cpp_service.py  llm_service.py  mistral_offline.py  mistral_service.py  openrouter_service.py  pdf_service.py  storage_service.py
backend/storage/: resumes.db  resumes.json
frontend/components/: UploadForm.tsx
src/: App.tsx  index.css  main.tsx
src/components/: Landing.tsx  Layout.tsx  LoginForm.tsx  Navbar.tsx  ProtectedRoute.tsx  RecruiterLoginForm.tsx  ResumeDisplay.tsx  ResumeResults.tsx  ResumeSummarizer.tsx  SearchForm.tsx  UploadForm.tsx  UserLoginForm.tsx
src/config/: api.ts
src/contexts/: AuthContext.tsx  ResumeContext.tsx
src/pages/: Index.tsx  LoginPage.tsx  RecruiterLoginPage.tsx  RecruiterResumesManagementPage.tsx  ResumeDetailsPage.tsx  SearchPage.tsx  SignupPage.tsx  UploadPage.tsx  UploadStatusPage.tsx  UserLoginPage.tsx
src/types/: index.ts
